# cargoflow-backend

./: .gitignore  README.md  pyproject.toml  swagger.yaml
app/: auth.py  database.py  main.py  models.py  schemas.py
app/routes/: admin_routes.py  agent_routes.py  auth_routes.py  client_routes.py
app/utils/: email.py
chatbot/: app.py  embeddings.py  rag_pipeline.py
chatbot/data/: data.txt
tests/: conftest.py  test_admin.py  test_agent.py  test_auth.py  test_chatbot.py  test_client.py
