[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt<4.0",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.128.3",
    "google-genai>=1.68.0",
    "google-generativeai>=0.8.6",
    "huggingface-hub>=1.9.0",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "pydantic[email]>=2.12.5",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "sentence-transformers>=5.3.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]
